# verifier-loop

./: .gitignore  .gitnexusignore  .hindsight.json  AGENTS.md  Cargo.toml  README.md  THREAT-MODEL.md  USAGE.md
.pi-opa-net/audit/: a609b050-bfad-49ce-b590-ee5f525a3057.jsonl
examples/: proof_tamper.rs  tamper_proof.rs
flow/design/: 2026-07-08-fuzzy-cite-verifier.md  2026-07-08-schema-versioning-research.md  2026-07-08-vcalc-probability-model.md  2026-07-08-verdict-enhancements.md
flow/explore/: 2026-07-03-locked-decisions.yaml  2026-07-03-open-threads.yaml  2026-07-03-turn1-problem-statement-intention.md  2026-07-03-turn2-locking-decisions-six-threads.md  2026-07-03-turn3-env-vars-acp-format-parallel.md  2026-07-03-turn4-config-schema-completion-hash.md  2026-07-03-turn5-code-location-aliases.md  README.md
flow/findings/: 2026-07-03-language-choice.md  2026-07-05-pi-stdin-prompt.md  2026-07-09_branch-consolidation-analysis.md  2026-07-09_branch-consolidation-audit.md  2026-07-09_dead-branch-audit.md  2026-07-09_jewilo-bloat-files-openspec-dashboard.md  2026-07-16_bench-openspec-task-scout.md  2026-07-16_ragquick-vs-rolesmart.md
flow/fixtures/: acp_pi_sample.err  acp_pi_sample.jsonl  acp_pi_verifierdone.jsonl
flow/intentions/: 2026-07-09_consolidate-branches.md  2026-07-09_remove-jewilo-bloat-files.md  2026-07-14_health-cooldown-and-reject-notes-prompt.md  2026-07-14_stats-and-audit-subcommands.md
flow/plans/: 2026-07-09_consolidate-branches-merge-plan.md
flow/proof/: REAL_SELFVERIFY.txt  TAMPER_PROOF.txt  coverage_report.txt  tamper_transcript.txt
flow/usecases/: programmatic-json-output.md
scripts/: install.sh  smoke-local.sh  stub_approve.sh  stub_reject.sh
scripts/bench/: README.md  compare.sh  (+2 more)
src/: lib.rs
tests/: acp_parser.rs  audit_subcommand.rs  cli_e2e.rs  cli_resume_notes_and_init_prompt.rs  compaction_recovery.rs  consensus.rs  crypto.rs  dynamic_pipeline_cli_e2e.rs  dynamic_pipeline_config.rs  dynamic_pipeline_e2e.rs  dynamic_pipeline_phase.rs  dynamic_pipeline_phaseid.rs  dynamic_pipeline_verifier_ids.rs  goal_lifecycle.rs  goal_notes.rs  health.rs  health_cooldown_e2e.rs  hermes_profile.rs  json_output_audit_stats.rs  json_output_envelope.rs  json_output_jewije.rs  json_output_jewilo.rs  observe.rs  per_verifier.rs  prompt.rs  prompt_bloat.rs  prompt_policy_dedup.rs  prompt_reject_notes.rs  receipt.rs  round_recover.rs  round_recover_cli.rs  session_reuse.rs  smoke.rs  spawn_goal_file_transport.rs  spawn_orchestrator.rs  spawn_per_verifier.rs  spawn_stdin_transport.rs  stats_subcommand.rs  store.rs  trace_jsonl.rs  (+4 more)
(+169 files in other folders)
